keepassxc: update to 2.3.3.

Also add upstream patch for building with Qt 5.11.

2.3.3

Fix crash when browser integration is enabled [#1923]

2.3.2

Enable high entropy ASLR on Windows [#1747]
Enhance favicon fetching [#1786]
Fix crash on Windows due to Auto-Type [#1691]
Fix dark tray icon changing all icons [#1680]
Fix --pw-stdin not using getPassword function [#1686]
Fix placeholders being resolved in notes [#1907]
Enable auto-type start delay to be configurable [#1908]
Browser: Fix native messaging reply size [#1719]
Browser: Increase maximum buffer size [#1720]
Browser: Enhance usability and functionality [#1810, #1822, #1830, #1884, #1906]
SSH Agent: Parse aes-256-cbc/ctr keys [#1682]
SSH Agent: Enhance usability and functionality [#1677, #1679, #1681, #1787]

2.3.1

Fix unnecessary automatic upgrade to KDBX 4.0 and prevent challenge-response key being stripped [#1568]
Abort saving and show an error message when challenge-response fails [#1659]
Support inner stream protection on all string attributes [#1646]
Fix favicon downloads not finishing on some websites [#1657]
Fix freeze due to invalid STDIN data [#1628]
Correct issue with encrypted RSA SSH keys [#1587]
Fix crash on macOS due to QTBUG-54832 [#1607]
Show error message if ssh-agent communication fails [#1614]
Fix --pw-stdin and filename parameters being ignored [#1608]
Fix Auto-Type syntax check not allowing spaces and special characters [#1626]
Fix reference placeholders in combination with Auto-Type [#1649]
Fix qtbase translations not being loaded [#1611]
Fix startup crash on Windows due to missing SVG libraries [#1662]
Correct database tab order regression [#1610]
Fix GCC 8 compilation error [#1612]
Fix copying of advanced attributes on KDE [#1640]
Fix member initialization of CategoryListWidgetDelegate [#1613]
Fix inconsistent toolbar icon sizes and provide higher-quality icons [#1616]
Improve preview panel geometry [#1609]